Fix: iOS FormItemSkin content vertical alignment
git-svn-id: https://dev.piaction.com/svn/pia-mobile-pack/trunk@307 87834345-0715-4cf4-9d45-ad77311fbdac

--- a/piaMobileTheme/src/main/flex/defaults.css
+++ b/piaMobileTheme/src/main/flex/defaults.css
@@ -55,6 +55,11 @@
     {
         color: #000000;
     }
+    s|FormItem #sequenceDisplay
+    {
+        color: #000000;
+    }
+    
     s|FormItem s|TextInput
     {
         borderVisible: false;
